tests/fixtures/LatestTests/ObjectTests/errors/duplicate_type_declaration.fg
/; EXPECT_ERROR: CustomTypeAlreadyDeclared
type Person = {
    name: str
    age: int
}

type Person = {
    name: str
    age: int
}

